# study-cpp-python-binder

./: CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
include/cpppythonbinder/: config.h  module.h  parameter.h  signal.h  signal.h_temp  types.h
include/cpppythonbinder/core/: config.h  parameter.h  signal.h
src/: CMakeLists.txt  config.cpp  module.cpp  parameter.cpp  signal.cpp  signal.cpp_temp
src/core/: config.cpp  module.cpp  parameter.cpp  signal.cpp
swig/: core.i  module.i  readme.md
swig/python/: CMakeLists.txt  setup.py.in
